# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cas3-cli"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
ordered-float = "4.1.0"
peg = "0.8.1"
rug = "1.22.0"
rustyline = { version = "12.0.0", features = ["derive", "custom-bindings"] }
