[package]
name = "jupyter-cas3"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Jupyter Kernel for cas3"
repository = "https://github.com/anandijain/cas3.rs"
documentation = "https://docs.rs/cas3-jupyter"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[[bin]]
name = "jupyter-cas3"
path = "src/main.rs"

[dependencies]
url = "2.4.1"
async-trait = "0.1.73"
tracing-subscriber = "0.3.17"
clap = { version = "4.4.2", features = ["derive"] }

[dependencies.jupyter]
version = "0.2.1"
#path = 'C:\Users\Dell\CLionProjects\jupyter-protocol\projects\jupyter'

[dependencies.jupyter-derive]
version = "0.0.2"
#path = "C:\\Users\\Dell\\CLionProjects\\jupyter-protocol\\projects\\jupyter-derive"

[dependencies.cas3-core]
version = "0.1.*"
path = "../cas3-core"

[dev-dependencies]
tokio = "1.32.0"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
